Add initial transcript_searcher C++ project, and change configs etc. to be project-root relative

--- a/config.json
+++ b/config.json
@@ -3,6 +3,6 @@
         "openai": "<API KEY>"
     },
     "Paths": {
-        "database": "../database/application.db"
+        "database": "database/application.db"
     }
 }
